refactor(util): ParsingUtils 메서드명 명확화
- `getList` 메서드를 `splitAndParseToList`로 변경하여 메서드의 역할을 직관적으로 표현
- 문자열을 나누고 정수 목록으로 변환하는 작업을 더 명확하게 나타내도록 메서드명 수정