@@ -2,7 +2,6 @@ package lotto.util;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import lotto.view.ErrorMessage;
 
 public class ParsingUtils {
@@ -17,19 +16,17 @@ public class ParsingUtils {
 
     public static List<Integer> parseStringToIntegerList(String input) {
         try {
-            List<String> splitStrings = splitString(input);
-            return splitStrings.stream()
-                    .map(ParsingUtils::parseStringToInteger) // `parseStringToInteger` 활용
-                    .collect(Collectors.toList());
+            return splitAndParseToList(input);
         } catch (NumberFormatException e) {
             throw new IllegalArgumentException(ErrorMessage.LOTTO_NUMBERS_FORMAT_INVALID.getMessage());
         }
     }
 
-    private static List<String> splitString(String input) {
+    private static List<Integer> splitAndParseToList(String input) {
         return Arrays.stream(input.split(","))
                 .map(String::trim)
-                .collect(Collectors.toList());
+                .map(Integer::parseInt)
+                .toList();
     }
 
     private ParsingUtils() {
